modules/network/security_group.tf
resource "aws_security_group" "cluster_sg" {
  vpc_id = aws_vpc.main.id
  name   = "cluster_sg_vivek_anjith"
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.elb_sg.id]
  }

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.elb_sg.id]
  }


  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.elb_sg_cidr
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = var.elb_sg_cidr
  }

  tags = {
    name = "vivek_anjith"
  }

}

resource "aws_security_group" "elb_sg" {
  vpc_id = aws_vpc.main.id
  name   = "elb_sg_vivek_anjith"
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.elb_sg_cidr
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = var.elb_sg_cidr
  }

  tags = {
    name = "vivek_anjith"
  }
}
